# openapi-to-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: launch-checklist.md  post-template.md
docs/release/: day-2-growth-playbook.md  launch-copies-v0.3.2.md  launch-copies.md  pinned-issue-openapi-drop.md  publish-runbook.md  repo-branding.md  v0.3.0-release-notes.md  v0.3.1-release-notes.md  v0.3.2-release-notes.md
examples/: store.config.yaml  store.yaml  swagger2.yaml
examples/external-ref/: api.yaml  schemas.yaml
scripts/: demo.sh
src/openapi_to_mcp/: __init__.py  cli.py  config.py  models.py  openapi.py  runtime.py
tests/: test_config.py  test_openapi.py  test_runtime.py
